# pyambelib

./: MANIFEST.in  README.md  pyproject.toml  setup.py
src/: libambe_wrapper.c
src/pyambelib/: __init__.py
