[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyambelib"
version = "0.1.0"
description = "A Python wrapper for mbelib-neo AMBE decoding"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "GPL-2.0-or-later"}
dependencies = []